package com.masanz.ldl;

import com.masanz.ldl.app.LibreriaApplication;

public class Main {
    public static void main(String[] args) {
        LibreriaApplication.main(args);
    }
}
